# parseandroidkernrel

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  __init__.py
build-out/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-out/c_reginst/: Makefile  cmake_install.cmake
build-out/hde_armv8/: Makefile  cmake_install.cmake
build-out/ki_to_vmlinux/: Makefile  cmake_install.cmake  ki_to_vmlinux
build-out/local_util/: Makefile  cmake_install.cmake
build-out/parseAndKern/: Makefile  cmake_install.cmake
build-out/patchCrc/: Makefile  cmake_install.cmake  patchCrc
build-out/uncrc/: Makefile  cmake_install.cmake  uncrc
count_ksymtabstr/: CMakeLists.txt  README.md  main.cpp
hdeA64/: CMakeLists.txt  hdeA64.cpp  hdeA64.h
instByEnc/: CMakeLists.txt  ibeSet.cpp  ibeSet.h
ki_to_vmlinux/: CMakeLists.txt  README.md  main.cpp  plugin_load.cpp
localUtil/: localUtil.h
lz42lz4/: CMakeLists.txt  main.cpp
opcOperand/: CMakeLists.txt  opcOperand.cpp  opcOperand.h
parseAndKern/: CMakeLists.txt  iterate_dir.cpp  iterate_dir.h  kern_static.cpp  kern_static.h  kern_static.hpp  main.cpp  modpost_dup.c  modpost_dup.h  pak_base.cpp  pak_core.cpp  pak_dyn.cpp  pak_gen.cpp  pak_grab.cpp  parseAndKern.cpp  parseAndKern.h  patchCrc.cpp  patchCrc.h  plk_core.cpp  plk_generators.cpp  plk_kcrc_track.cpp  plk_sections.cpp  spare_vmlinux.h  sumversion_dup.c
parseAndKern/android/: huawei.lya-l29_9.1.0.300.constants.json
parseAndKern/json_filters/: a.out  android_family.json  elf_helpers.json  jsonsamp.cpp  pixel_device.json
parseAndKern/vxworks/: CMakeLists.txt  eagle20-5.3.04.constants.json  eagle20-5.4.03.constants.json  eagleONE-5.3.04.constants.json  linksys-5.4.2.constants.json  vxworks_parse.cpp  vxworks_symbol_notes.md  vxworksdefs.h
patchCrc/: CMakeLists.txt  README.md  iterate_dir.cpp  main.cpp  patchCrc.cpp  patchCrc.h  patchCrc.py
uncrc/: CMakeLists.txt  main.cpp
